src/jenkins/jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          # 
          image: jenkins/jenkins:lts-jdk17
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080  # Exposes container port
          volumeMounts:
            - mountPath: var/jenkins_home
              name: jenkins-home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
